# ark-save-parser

./: .gitignore  README.md  benchmark_api_workers.py  compare_fast_vs_python.py  compare_threadpool_nogil.py  pleinx_test.py  profile_bottleneck.py  profile_dino_parse.py  pyproject.toml
arkparse_fast/: Cargo.toml  README.md  benchmark.py  pyproject.toml
arkparse_fast/python/arkparse_fast/: __init__.py
arkparse_fast/src/: lib.rs
examples/basic parsing/: ex_04_remove_blueprint_from_save_file.py
examples/basic_parsing/: deep_profiler.py  quick_profile.py  test_profile.py
examples/dino_api/: ex_02a_dino_by_stat_heatmap.py  ex_15_force_grow_up_babies.py
examples/equipment_api/: ex_06_rank_all_equipment.py
examples/equipment_api/history/: append_ark_to_history.py  create_history_json.py  get_history.py
examples/other/: ex_01_logging_configuration.py
examples/structure_api/: ex_03_create_structure_heatmap.py  ex_09_print_market_inventory_by_tribe.py
src/arkparse/: __init__.py
src/arkparse/api/: _deviating_structures.py  base_api.py  dino_api.py  equipment_api.py  general_api.py  json_api.py  stackable_api.py  (+1 more)
testbench/: .gitignore  README.md  conftest.py  debug.py  pytest.ini  snapshot.py
testbench/test_save/: PUT_YOUR_SAVE_HERE.md
testbench/tests/: test_01_parsing.py  test_02_dinos.py  test_03_structures.py  test_04_equipment.py  test_05_players.py  test_06_json_export.py
tests/: conftest.py
wip/profiling/: pleinx_test.py  profile_api_bottleneck.py  profile_api_deep.py  profile_equipment.py  test_parallel_dino.py  trace_sqlite_calls.py
(+66 files in other folders)
