[package]
name = "arkparse_fast"
version = "0.1.0"
edition = "2021"
description = "High-performance binary parser for ARK save files"

[lib]
name = "arkparse_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
byteorder = "1.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
